# gitlab-version-bot

./: Cargo.toml  README.md
src/: bot.rs  cli.yml  gitlab_tag.rs  gitlab_version.rs  main.rs
