[package]
name = "gitlab-version-bot"
version = "0.1.0"
authors = ["Jean-Philippe Bidegain <jp@bidega.in>"]
description = "Post a message to a Rocket.Chat webbook if a Gitlab instance needs to be updated."
edition = "2018"
license = "MIT"

[dependencies]
ureq = { version = "*", features = ["json"] }
clap = { version = "2.33", features = ["yaml"]}
log = { version = "0.4" }
clogger = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.8"
